--- a/Index.html
+++ b/Index.html
@@ -31,11 +31,18 @@
     }
 
     .video {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin-top: 50px;
-      margin-bottom: 30px;
+      margin: 0px -20px 30px -20px;
+      padding: 20px;
+      padding-bottom: 57%;
+      position: relative;
+    }
+
+    .video > iframe {
+      position: absolute;
+      top: 5%;
+      left: 5%;
+      width: 90%;
+      height: 90%;
     }
 
     .container {
@@ -110,13 +117,11 @@
     }
 
     .introduction {
-      padding: 30px;
       margin-top: 30px;
     }
 
     .introduction p {
       color: #333;
-      margin: 2rem;
       text-align: center;
       font-size: 1.3rem;
     }
@@ -189,17 +194,20 @@
     <p>O livro que vai impactar a sua vida!</p>
   </header>
 
-  <div class="video">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/dRT4D4nxZiQ?si=vOFmU8Y7n9DYkNLQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-  </div>
-
-  <div class="but">
-    <a href="https://sun.eduzz.com/6W4812RY0Z">
-      <button class="btn2"><b>Adquira agora</b></button>
-    </a>
-  </div>
+  
 
   <div class="container">
+
+    <div class="video">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/dRT4D4nxZiQ?si=vOFmU8Y7n9DYkNLQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
+  
+    <div class="but">
+      <a href="https://sun.eduzz.com/6W4812RY0Z">
+        <button class="btn2"><b>Adquira agora</b></button>
+      </a>
+    </div>
+
     <section class="hero">
       <div class="hero-text">
         <h2>Descubra como transformar dor em força</h2>
@@ -241,15 +249,7 @@
       </ul>
     </section>
 
-    <section class="testimonials">
-      <h3>Depoimentos de leitores</h3>
-      <blockquote>
-        "Uma leitura que me fez chorar e sorrir. Me vi em cada capítulo. Obrigado por escrever isso."
-      </blockquote>
-      <blockquote>
-        "Simplesmente transformador. Nunca imaginei que um e-book pudesse mexer tanto comigo."
-      </blockquote>
-    </section>
+    
 
     <div class="but">
       <a href="https://sun.eduzz.com/6W4812RY0Z">
